# mazingame

./: .gitignore  .pre-commit-config.yaml  ADAPTIVE_SCREEN_MODE.md  CHANGES  CHANGES.adoc  CHANGES.md  CONTRIBUTING.md  Dockerfile  Dockerfile.web  Dockerfile_web.dockerfile  LICENSE  MANIFEST.in  MODERNIZATION.md  PHASE1_SUMMARY.md  README.adoc  README.md  README.rst  TODO  VENDORING.md  WEB_DEPLOYMENT_PLAN.md  WEB_DEPLOYMENT_README.md  WEB_IMPLEMENTATION_DEBUGGING.md  WEB_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  gameclasses.py  maze.py  mazingame-runner.py  mazingame.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  utils.py
.github/workflows/: ci.yml
mazingame/: GameScreen.py  __main__.py  gameclasses.py  globals.py  highscores.py  maze.py  mazingame.py
mazingame/curses_utils/: curses_utils.py
mazingame/mazepy/: __init__.py  mazepy.py
mazingame/utils/: utils.py
scripts/: build_local.sh  run_local.sh  run_mazingame.sh  start_web.ps1  start_web.sh
tests/: __init__.py  test_basic.py
web/: __init__.py  app.py  config.py  help.txt  mazingame_server.py  requirements-web.txt  session_manager.py  start_script.sh  terminal_handler.py
web/templates/: base.html  error.html  highscores.html  index.html  terminal.html  termpage.html
