[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazingame"
version = "1.7.0"
description = "A game of maze."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sami Salkosuo", email = "dev@rnd-dev.com"}
]
keywords = ["game", "maze", "curses", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    # No external dependencies - mazepy is vendored
]

[project.urls]
Homepage = "https://github.com/samisalkosuo/mazingame"
Repository = "https://github.com/samisalkosuo/mazingame"
Issues = "https://github.com/samisalkosuo/mazingame/issues"

[project.scripts]
mazingame = "mazingame.mazingame:main"

[tool.setuptools]
packages = ["mazingame", "mazingame.curses_utils", "mazingame.utils", "mazingame.mazepy"]

[tool.setuptools.package-data]
mazingame = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=mazingame --cov-report=term-missing --cov-report=html"